--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: node
     # command: sh -c "npm run dev"
-    command: "npm run dev"
+    command: "npm start"
     environment:
       - NODE_ENV=development
       - PORT=${PORT}
