--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon app.js",
     "dev": "concurrently \"docker-compose up -d mongo\" \"docker-compose up node\"",
     "concurrently": "concurrently \"npm run dev\" \"cd client && npm start\""
   },
   "dependencies": {
+    "apollo-server": "^2.13.1",
+    "apollo-server-express": "^2.13.1",
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.13",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.3"
   }
